feat: add editoras endpoint
